--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -4,10 +4,27 @@ hr {
 
 .jumbotron {
   height: 93vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 
 .lead {
   font-size: 1.7em;
+}
+
+.navbar {
+  text-align: center;
+}
+
+.navbar ul {
+  display: inline-block;
+}
+
+li {
+  font-size: 30px;
+  padding-left: 4px;
+  padding-right: 4px;
 }
 
 @media screen and (min-width: 768px) {
