--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -1,18 +1,6 @@
-hr {
-  width: 25%;
-}
-
-.jumbotron {
-  height: 93vh;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-}
-
-.lead {
-  font-size: 1.7em;
-}
-
+/*****************
+   Navigation
+******************/
 .navbar {
   text-align: center;
 }
@@ -27,8 +15,62 @@ li {
   padding-right: 4px;
 }
 
+/*****************
+   Jumbotron
+******************/
+.jumbotron {
+  margin-bottom: 0;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.lead {
+  font-size: 1.7em;
+}
+
+hr {
+  width: 25%;
+}
+
+.fa-chevron-down {
+  margin-top: 100px;
+}
+
 @media screen and (min-width: 768px) {
   .lead {
     font-size: 2em;
   }
 }
+
+/*****************
+   Grid
+******************/
+.no-gutter > [class*='col-'] {
+    padding-right:0;
+    padding-left:0;
+}
+
+.box {
+  border: 1px solid #ccc;
+  width: 100%;
+  height: 500px;
+  color: black;
+  background: linear-gradient(
+     white, white 50%, #8aacb8
+     50%, #8aacb8);
+  background-size: 100% 202%;
+  transition: all 0.2s ease;
+  animation: down-bump 0.4s ease;
+}
+
+@media screen and (min-width: 769px) and (max-width: 1200px) {
+  .box {
+    height: 450px;
+  }
+}
+
+/*****************
+   Contact
+******************/
