--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -28,8 +28,9 @@ hr {
    Jumbotron
 ******************/
 .jumbotron {
+  margin-top: 50px;
   margin-bottom: 0;
-  height: 100vh;
+  height: 700px;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -60,9 +61,9 @@ hr {
   color: #FFF;
 }
 
-@media screen and (min-width: 992px) {
-  .border:after {
-    width: 20%;
+@media screen and (max-width: 768px) {
+  h1 {
+    font-size: 4em !important;
   }
 }
 
