--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -1,6 +1,10 @@
 /*****************
    General Styles
 ******************/
+html, body {
+  font-family: 'Josefin Sans', sans-serif;
+}
+
 hr {
   width: 25%;
 }
@@ -17,6 +21,11 @@ h2 {
 /*****************
    Navigation
 ******************/
+.nav-link {
+  padding-left: 5px;
+  padding-right: 5px;
+}
+
 .navbar {
   text-align: center;
 }
@@ -25,13 +34,44 @@ h2 {
   display: inline-block;
 }
 
+.navbar ul li > a {
+  position: relative;
+  text-decoration: none;
+}
+
+.navbar ul li > a:hover {
+  color: #000;
+}
+
+.navbar ul li > a:before {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 2px;
+  bottom: 0;
+  left: 0;
+  background-color: #000;
+  visibility: hidden;
+  -webkit-transform: scaleX(0);
+  transform: scaleX(0);
+  -webkit-transition: all 0.3s ease-in-out 0s;
+  transition: all 0.3s ease-in-out 0s;
+}
+
+.navbar ul li > a:hover:before {
+  visibility: visible;
+  -webkit-transform: scaleX(1);
+  transform: scaleX(1);
+}
+
 /*****************
    Jumbotron
 ******************/
 .jumbotron {
   margin-top: 50px;
   margin-bottom: 0;
-  height: 700px;
+  height: 100vh;
+  max-height: 746px;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -50,8 +90,22 @@ h2 {
 }
 
 .fa-chevron-down {
-  margin-top: 100px;
   color: #FFF;
+}
+
+.contactBtn {
+  font-size: 20px;
+  margin: 0 auto;
+  color: #FFF;
+  background: none;
+  border: 1px solid red;
+  width: 177px;
+  height: 50px;
+  display: block;
+}
+
+.contactBtn:hover {
+  background: rgba(255, 0, 0, 0.3);
 }
 
 @media screen and (max-width: 768px) {
@@ -61,8 +115,101 @@ h2 {
 }
 
 @media screen and (min-width: 768px) {
+  .nav-link {
+    font-size: 20px;
+  }
+
   .lead {
     font-size: 1.6em;
+  }
+}
+
+/*****************
+   About
+*****************/
+.divider {
+  display: none;
+  background: #FFF;
+  position: absolute;
+  height: 100%;
+  width: 96px;
+  z-index: 1;
+  left: 50%;
+  transform: skewX(9deg);
+  transform-origin: 0 98%;
+}
+
+.left {
+  margin-bottom: 20px;
+}
+
+.right {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  position: relative;
+  z-index: 2;
+}
+
+.right p {
+  text-align: justify;
+  max-width: 700px;
+}
+
+.visible-xs {
+  display: none;
+}
+
+@media (max-width: 544px) {
+  .hidden-xs {
+    display: none;
+  }
+
+  .visible-xs {
+    display: block;
+  }
+
+  .no-gutters-xs {
+    padding-left: 0;
+    padding-right: 0;
+  }
+}
+
+@media (min-width: 544px) {
+  .visible-sm {
+    display: block;
+  }
+
+  .col {
+    height: 600px;
+  }
+
+  .left {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+}
+
+@media (min-width: 768px) {
+  .about-img {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+  }
+
+  .left {
+    padding: 0 90px 0 10px;
+  }
+
+  .divider {
+    display: block;
+  }
+
+  .right p {
+    margin-left: 10px;
+    margin-right: 50px;
   }
 }
 
@@ -116,4 +263,12 @@ label {
 
 .modal-hr {
   width: 75%;
+}
+
+/*****************
+   Helpers
+******************/
+
+.relative {
+  position: relative;
 }
