--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -78,7 +78,7 @@ h2 {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  background: linear-gradient(rgba(25, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
+  background: linear-gradient(rgba(25, 0, 0, 0.5), rgba(70, 65, 46, 0.7)),
   url(../img/jumbotron.jpg) no-repeat center center fixed;
   background-size: cover;
 }
@@ -263,7 +263,7 @@ h2 {
 ******************/
 
 .skills {
-  background: #46412E;
+  background: rgba(70,65,46,0.8);
 }
 
 .lead {
@@ -297,17 +297,21 @@ h2 {
 }
 
 /*****************
-   Grid
+   Work
 ******************/
 .no-gutter > [class*='col-'] {
     padding-right:0;
     padding-left:0;
 }
 
+.work .btn-primary {
+  margin-top: 5px;
+}
+
 .box {
   border: 1px solid #ccc;
   width: 100%;
-  height: 385px;
+  padding-bottom: 35px;
   color: black;
   background: linear-gradient(
      white, white 50%, #8aacb8
@@ -315,6 +319,25 @@ h2 {
   background-size: 100% 202%;
   transition: all 0.2s ease;
   animation: down-bump 0.4s ease;
+}
+
+.btn-primary {
+  background: rgba(0, 0, 0, 0.6);
+}
+
+.btn-primary.disabled:hover, .btn-primary:disabled:hover {
+  background: rgba(0, 0, 0, 0.6);
+}
+
+.btn-primary:hover {
+    background: #46412E;
+}
+
+@media (min-width: 768px) {
+  .box {
+    height: 385px;
+    padding-bottom: 0;
+  }
 }
 
 /*****************
