--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -282,13 +282,6 @@ h2 {
   margin: 10px auto;
 }
 
-/*.divider-work {
-  position: absolute;
-  width: 100%;
-  height: 40px;
-  background: blue;
-}*/
-
 @media (min-width: 544px) {
   .circle {
     width: 125px;
@@ -351,8 +344,12 @@ label {
   padding-left: 0;
 }
 
-.social-media li {
+.contactform .social-media li {
   display: inline-block;
+}
+
+.contactform .social-media li i {
+  color: #000;
 }
 
 .modal-hr {
